<resources>
    <string name="app_name">NotesAppAdvanced</string>
    <string name="notes">My Notes</string>
    <string name="search">Search...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notes_title">Notes Title</string>
    <string name="notes_sub_title">Notes Subtitle</string>
    <string name="notes_desc">Enter Note Here</string>
    <string name="web_url">Enter Web Url</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="read_storage_permission_text">This app needs access to your storage.</string>
</resources>