<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:src="@drawable/ic_tick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:ellipsize="end"
        android:fontFamily="@font/kanit"
        android:hint="@string/notes_title"
        android:maxLines="1"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/ColorWhite"
        android:textColorHint="@color/ColorGray"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBack" />

    <TextView
        android:id="@+id/tvDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:ellipsize="end"
        android:fontFamily="@font/kanit"
        android:maxLines="1"
        android:paddingStart="@dimen/_10sdp"
        android:textColor="@color/ColorWhite"
        android:textColorHint="@color/ColorGray"
        android:textSize="@dimen/_14ssp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNoteTitle" />


    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNoteTitle"

        >

        <View
            android:id="@+id/colorView"
            android:layout_width="@dimen/_5sdp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="@color/ColorBlue" />

        <EditText
            android:id="@+id/etNoteSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/kanit"
            android:hint="@string/notes_sub_title"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/ColorWhite"
            android:textColorHint="@color/ColorGray"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etNoteTitle" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/layoutImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/line1">


        <ImageView
            android:id="@+id/imgNote"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imgDelete"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/baseline_delete_24"
            android:visibility="gone" />


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/layoutWebUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutImage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etWebLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:fontFamily="@font/kanit"
                android:hint="@string/web_url"
                android:inputType="textMultiLine"
                android:text="http://"
                android:textColor="@color/ColorWhite"
                android:textColorHint="@color/ColorGray"
                android:textSize="@dimen/_12ssp" />

            <ImageView
                android:id="@+id/imgUrlDelete"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/baseline_delete_24"
                android:visibility="gone" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:background="@color/colorAccent"
                android:fontFamily="@font/kanit"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/ColorWhite" />

            <Button
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@color/colorAccent"
                android:fontFamily="@font/kanit"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/ColorWhite" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lineWebUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutWebUrl">


        <TextView
            android:id="@+id/tvWebLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_weight="1"
            android:autoLink="web"
            android:ellipsize="end"
            android:fontFamily="@font/kanit"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/ColorWhite"
            android:textColorHint="@color/ColorGray"
            android:textSize="@dimen/_12ssp"
            android:visibility="gone" />


    </LinearLayout>


    <EditText
        android:id="@+id/etNoteDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:fontFamily="@font/kanit"
        android:hint="@string/notes_desc"
        android:inputType="textMultiLine"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/ColorWhite"
        android:textColorHint="@color/ColorGray"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lineWebUrl" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView
            android:id="@+id/imgMore"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_gravity="center"
            android:src="@drawable/ic_line" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>